--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "php": "^7.4 || ^8.0",
     "nesbot/carbon": "^2.0",
     "lcobucci/jwt": "^4.0",
-    "ext-phalcon": "^4.0"
+    "ext-phalcon": "^4.0 || ^5.0"
   },
   "require-dev": {
   },
