--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
   "require": {
     "php": "^7.4 || ^8.0",
     "nesbot/carbon": "^2.0",
+    "sinbadxiii/phalcon-auth": "^v1.1.0",
     "lcobucci/jwt": "^4.0",
     "ext-phalcon": "^4.0 || ^5.0"
   },
