--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,8 @@
     "ext-phalcon": "^4.0 || ^5.0"
   },
   "require-dev": {
+    "mockery/mockery": "^1.4",
+    "phpunit/phpunit": "^9.5"
   },
   "autoload": {
     "psr-4": {
