--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,11 @@
     }
   ],
   "require": {
-    "php": "^7.4 || ^8.0",
+    "php": "^7.4 || ^8.1",
     "nesbot/carbon": "^2.0",
-    "sinbadxiii/phalcon-auth": "^v1.1.0",
+    "sinbadxiii/phalcon-auth": "^v2.0.0",
     "lcobucci/jwt": "^4.0",
-    "ext-phalcon": "^4.0 || ^5.0"
+    "ext-phalcon": "^5.0"
   },
   "require-dev": {
     "mockery/mockery": "^1.4",
