--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     }
   ],
   "require": {
-    "php": "^7.4 || ^8.4",
+    "php": "^7.4 || ^8.3 || ^8.4",
     "nesbot/carbon": "^2.0",
     "sinbadxiii/phalcon-auth": "^v2.0.0",
     "lcobucci/jwt": "^5.0",
